welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:12: error: value unary_! is not a member of Unit
while (!haveBaggle())
       ^Program:12: error: type mismatch;
 found   : Unit
 required: Boolean
while (!haveBaggle())
^